// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedImage renders correctly 1`] = `
<a
  aria-label="alt-text"
  className="css-class-name"
  href="url-link"
  target="_blank"
>
  <img
    alt="alt-text"
    className={undefined}
    onClick={undefined}
    role={undefined}
    src="image-src"
  />
</a>
`;

exports[`LinkedImage renders correctly 2`] = `
<a
  aria-label="alt-text"
  className="css-class-name"
  href="url-link"
  target="new_window"
>
  <img
    alt="alt-text"
    className={undefined}
    onClick={undefined}
    role={undefined}
    src="image-src"
  />
</a>
`;
